# wm_data_collector

./: CMakeLists.txt  README.md  package.xml
config/: categoryToNames.yaml  data_collector_params.yaml
include/: CDataEntity.h  ColorComparator.h  EntityWraper.h  FaceAssignator.h  wm_data_collector.h
launch/: data_collector.launch
msg/: Coloration.msg  entity.msg
src/: CDataEntity.cpp  CDataEntity.h  ColorComparator.cpp  ColorComparator.h  EntityWraper.cpp  FaceAssignator.cpp  wm_data_collector.cpp  wm_data_collector.h
